    occupancy

  o Add further SHELX support: .res files are split and unsplit on
    reading/writing.  Solve the ^M problem like SHELX does. SHELXL
    refinement interface improved [GMS]

  o Fix crash when applying NCS edits [Michael Url]

  o Added CNS map-reading [provided by Kevin Cowtan]. ".cns" is now 
    an acceptable map extension.

  o Add Terminal Residue for nucleotide polymers (to some extent)

  o Alt confs of ligands no longer fly appart on regularization

  o GTk+-2 interface now usable

  o Added SEGID info to clicked atom [Christine Durnham]

  o Added function fill-partial-residue [Bob Nolte]

  o Added function transform-molecule-by [Alastair Fyfe]

  o Added function to change the colour of the unit cell [Dirk Kostrewa]

  o Added multi-threaded socket reading for Phenix and other
    interfaces

  o Added function "blob under cursor -> screen centre" [FvD]

  o Fix map reading so that it accepts user-approved extensions
    [Peter Meyer]

  o Reading a bespoke cif dictonary no longer cripples "Get Monomer"
    for conventional residues [Judit Debreczeni]

  o Added Views system [inspired by PyMol]

  o Colour by B-factor and Occupancy

  o Ramachandran plot dialog remembers where it was put last time


    -------------------------------------------------------
    -------------------- Old Releases ---------------------
    -------------------------------------------------------


Release 0.3.1 "Another Basil Grande?"

  o Enable NCS ghosts
  
  o Add output of fractional matrix when doing coordinates
    superposition [George Sheldrick]


Release 0.3 "Basil Grande"

  o Fixed crash on closing Baton Guide Points molecule [Richard
    Baxter].

  o Fixed crash on manipulating N-terminal backbone angles [Richard
    Baxter].

  o Concept of "Active Residue" added [Frank von Delft].  Added
    trivial functions, (refine-active-residue),
    (refine-active-residue-triple) and (autofit-rotamer-active-residue),